# ram

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
tf/staging/: config.tf  main.tf
tools/: get_avro_schema.py
