[tool.poetry]
name = "ram"
version = "0.1.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
h5py = "^3.3.0"
pandas = "^1.2.5"
avro = "^1.10.2"
python-snappy = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
